# AutoERP

./: README.md  Setup.py  autoerp.db  coverage.xml  create_admin.py  how to use.md  ink.txt  pyproject.toml  setup.cfg
autoerp/: __init__.py  __main__.py  api.py  cli.py  config.py  core.py  database.py  main.py  ui.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_5324908a090410a7___init___py.html  z_5324908a090410a7___main___py.html  z_5324908a090410a7_api_py.html  z_5324908a090410a7_cli_py.html  z_5324908a090410a7_config_py.html  z_5324908a090410a7_core_py.html  z_5324908a090410a7_database_py.html  z_5324908a090410a7_main_py.html  z_5324908a090410a7_ui_py.html
plugins/: __init__.py  base.py  custom_analytics.py
tests/: __init__.py  conftest.py  test_api.py  test_core.py
