# setup.cfg
[metadata]
name = autoerp
version = attr: autoerp.__version__
description = Système de planification des ressources d'entreprise (ERP) avec architecture hexagonale
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/autoerp/autoerp
project_urls =
    Bug Tracker = https://github.com/autoerp/autoerp/issues
    Changelog = https://github.com/autoerp/autoerp/blob/main/CHANGELOG.md
    Documentation = https://autoerp.readthedocs.io
    Source Code = https://github.com/autoerp/autoerp
author = AutoERP Team
author_email = contact@autoerp.com
maintainer = AutoERP Team
maintainer_email = contact@autoerp.com
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: FastAPI
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Natural Language :: French
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Office/Business
    Topic :: Office/Business :: Financial
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    fastapi>=0.104.1
    uvicorn[standard]>=0.24.0
    streamlit>=1.28.1
    sqlalchemy>=2.0.23
    alembic>=1.12.1
    pydantic>=2.5.0
    python-jose[cryptography]>=3.3.0
    passlib[bcrypt]>=1.7.4
    python-multipart>=0.0.6
    jinja2>=3.1.2
    pandas>=2.1.3
    numpy>=1.25.2
    plotly>=5.17.0
    redis>=5.0.1
    celery>=5.3.4
    psycopg2-binary>=2.9.9
    click>=8.1.7
    pyyaml>=6.0.1
    python-dateutil>=2.8.2
    email-validator>=2.1.0
    httpx>=0.25.2
    aiofiles>=23.2.1

[options.packages.find]
where = .
include = autoerp*

[options.package_data]
autoerp = 
    data/*.yaml
    data/*.html
    plugins/*.py
    templates/*.html
    py.typed

[options.entry_points]
console_scripts =
    autoerp = autoerp.cli:main
    autoerp-server = autoerp.api:run_server
    autoerp-ui = autoerp.ui:run_ui
    autoerp-init = autoerp.cli:init_project
    autoerp-migrate = autoerp.cli:migrate_db

[options.extras_require]
dev =
    pytest>=7.4.3
    pytest-asyncio>=0.21.1
    pytest-cov>=4.1.0
    black>=23.11.0
    flake8>=6.1.0
    mypy>=1.7.1
    isort>=5.12.0
    pre-commit>=3.5.0
    bandit>=1.7.5
    safety>=2.3.5
docs =
    sphinx>=7.2.6
    sphinx-rtd-theme>=1.3.0
    mkdocs>=1.5.3
    mkdocs-material>=9.4.8
testing =
    pytest>=7.4.3
    pytest-asyncio>=0.21.1
    pytest-cov>=4.1.0
    pytest-mock>=3.12.0
    factory-boy>=3.3.0
    faker>=20.1.0
postgresql =
    psycopg2-binary>=2.9.9
redis =
    redis>=5.0.1
    celery>=5.3.4
all =
    %(dev)s
    %(docs)s
    %(testing)s
    %(postgresql)s
    %(redis)s

# Flake8 Configuration
[flake8]
max-line-length = 88
max-complexity = 10
extend-ignore = 
    E203,  # whitespace before ':'
    E501,  # line too long (handled by black)
    W503,  # line break before binary operator
    F401,  # imported but unused (handled by isort)
exclude =
    .git,
    __pycache__,
    .pytest_cache,
    .mypy_cache,
    build,
    dist,
    *.egg-info,
    .venv,
    venv,
    migrations
per-file-ignores =
    __init__.py:F401
    tests/*:S101,S106
    */migrations/*:E501

# Bandit Security Linter
[bandit]
exclude_dirs = tests,migrations
skips = B101,B601

# MyPy Type Checking
[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True
show_error_codes = True

[mypy-streamlit.*]
ignore_missing_imports = True

[mypy-plotly.*]
ignore_missing_imports = True

[mypy-redis.*]
ignore_missing_imports = True

[mypy-celery.*]
ignore_missing_imports = True

[mypy-psycopg2.*]
ignore_missing_imports = True

# Coverage Configuration
[coverage:run]
source = autoerp
omit = 
    */tests/*
    */migrations/*
    */venv/*
    */env/*
    setup.py
    */site-packages/*
branch = True

[coverage:report]
precision = 2
skip_covered = False
skip_empty = False
sort = Cover
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @abstract

[coverage:html]
directory = htmlcov

[coverage:xml]
output = coverage.xml